@@ -1,8 +1,7 @@
 package nextstep.mvc;
 
-
 import static nextstep.web.support.ContentType.contentType;
-import static nextstep.web.support.ContentType.contentTypeKey;
+import static nextstep.web.support.ContentType.headerKey;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -18,13 +17,12 @@ public class DefaultStaticResourceHandler implements StaticResourceHandler {
         try {
             final String path = httpRequest.getRequestURI();
             final URL resourceUrl = httpRequest.getServletContext().getResource(path);
-            final byte[] body = Files.readAllBytes(new File(resourceUrl.toURI()).toPath());
-            final String content = new String(body);
-            httpResponse.setHeader(contentTypeKey(), contentType(path));
+            final String content = Files.readString(new File(resourceUrl.toURI()).toPath());
+            httpResponse.setHeader(headerKey(), contentType(path));
             httpResponse.getWriter().append(content);
             httpResponse.flushBuffer();
         } catch (Exception e) {
-          throw new PageNotFoundException();
+            throw new PageNotFoundException();
         }
     }
 }
